--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,10 +55,10 @@
 </head>
 <body>
   <div class="todayBtn">
-    <input type="button" id="btnCurrent" value="当天数据"/>
+    <input type="button" id="btnCurrent" value="当天数据" name="numCurrent"/>
   </div>
   <div class="allBtn">
-    <input type="button" id="btnAll" value="所有数据"/>
+    <input type="button" id="btnAll" value="所有数据" name="numAll"/>
   </div>
 
 <table class="t" align="center">
