--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -51,13 +51,13 @@ tbody tr.odd{
            background-color: #FFFFFF;
         }
 tbody tr.even{
-        background-color: #ECF2FE;
+        background-color: #f5fafe;
         /*F1F9F9*/
 }
 .t th{
      border: 1px gray solid;
      height: 45px;
-     background-color: #E3E3E3;
+     background-color: #D7E9FE;
 }
 .dataBtn{
   font-size: 1pt;
